[gd_scene load_steps=4 format=3 uid="uid://dvv8k7luo64yn"]

[ext_resource type="Script" path="res://views/settings_menu/settings_menu_hud.gd" id="1_5b2p6"]

[sub_resource type="InputEventAction" id="InputEventAction_obrm1"]
action = &"escape"

[sub_resource type="Shortcut" id="Shortcut_okvqe"]
events = [SubResource("InputEventAction_obrm1")]

[node name="Settings_Menu_HUD" type="CanvasLayer" groups=["Persist"]]
script = ExtResource("1_5b2p6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -270.0
offset_right = 100.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 8

[node name="Master_Volume_Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Master Volume"
horizontal_alignment = 1

[node name="HBoxMaster" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Master_Volume_Slider" type="HSlider" parent="VBoxContainer/HBoxMaster"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 40.0
max_value = 80.0
value = 60.0

[node name="Master_Volume_Mute_Toggle" type="CheckBox" parent="VBoxContainer/HBoxMaster"]
layout_mode = 2

[node name="Game_Volume_Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sound Effects Volume"
horizontal_alignment = 1

[node name="HBoxGame" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Game_Volume_Slider" type="HSlider" parent="VBoxContainer/HBoxGame"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 40.0
max_value = 80.0
value = 80.0

[node name="Game_Volume_Mute_Toggle" type="CheckBox" parent="VBoxContainer/HBoxGame"]
layout_mode = 2

[node name="Music_Volume_Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 1

[node name="HBoxMusic" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Music_Volume_Slider" type="HSlider" parent="VBoxContainer/HBoxMusic"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 40.0
max_value = 80.0
value = 80.0

[node name="Music_Volume_Mute_Toggle" type="CheckBox" parent="VBoxContainer/HBoxMusic"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Exit_Btn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
shortcut = SubResource("Shortcut_okvqe")
text = "Exit Settings
"

[connection signal="value_changed" from="VBoxContainer/HBoxMaster/Master_Volume_Slider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxMaster/Master_Volume_Mute_Toggle" to="." method="_on_master_volume_mute_toggle_toggled"]
[connection signal="value_changed" from="VBoxContainer/HBoxGame/Game_Volume_Slider" to="." method="_on_game_volume_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxGame/Game_Volume_Mute_Toggle" to="." method="_on_game_volume_mute_toggle_toggled"]
[connection signal="value_changed" from="VBoxContainer/HBoxMusic/Music_Volume_Slider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxMusic/Music_Volume_Mute_Toggle" to="." method="_on_music_volume_mute_toggle_toggled"]
[connection signal="pressed" from="VBoxContainer/Exit_Btn" to="." method="_on_exit_btn_pressed"]
